<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        style="@style/Fill"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:oak="http://oak/oak/schema"
        android:orientation="vertical">
    <View
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:background="@color/orange"/>
    <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/action_bar_height"
            android:background="@color/orange"/>
    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">
        <RelativeLayout
                style="@style/FillWidth">
            <LinearLayout
                    style="@style/FillWidth"
                    android:id="@+id/config"
                    android:baselineAligned="false"
                    android:paddingTop="@dimen/default_padding">
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                    <oak.widget.TextViewWithFont
                            style="@style/DefaultTextView.Huge"
                            android:id="@+id/hourly_rate"
                            android:clickable="true"
                            android:textColor="@color/default_text_color_selector"
                            android:layout_gravity="center_horizontal"
                            android:singleLine="true"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:scrollHorizontally="true"
                            android:paddingLeft="@dimen/default_padding"
                            android:paddingRight="@dimen/default_padding"
                            oak:font="@string/default_font_mono"/>
                    <oak.widget.TextViewWithFont
                            style="@style/DefaultTextView.Large"
                            android:text="@string/hourly_rate"
                            android:layout_marginTop="@dimen/negative_label_margin"
                            android:layout_gravity="center_horizontal"
                            oak:font="@string/default_font_light"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                    <LinearLayout
                            style="@style/FillWidth"
                            android:id="@+id/people_count_container"
                            android:gravity="center_vertical">
                        <ImageView
                                style="@style/Wrap"
                                android:id="@+id/minus"
                                android:clickable="true"
                                android:src="@drawable/ic_minus"
                                android:contentDescription="@string/minus"/>
                        <oak.widget.TextViewWithFont
                                style="@style/DefaultTextView.Huge"
                                android:id="@+id/people_count"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:singleLine="true"
                                android:maxLines="1"
                                android:ellipsize="end"
                                android:scrollHorizontally="true"
                                android:gravity="center"
                                android:clickable="true"
                                android:textColor="@color/default_text_color_selector"
                                oak:font="@string/default_font_mono"/>
                        <ImageView
                                style="@style/Wrap"
                                android:id="@+id/plus"
                                android:clickable="true"
                                android:src="@drawable/ic_plus"
                                android:contentDescription="@string/plus"/>
                    </LinearLayout>
                    <oak.widget.TextViewWithFont
                            style="@style/DefaultTextView.Large"
                            android:text="@string/num_people"
                            android:layout_marginTop="@dimen/negative_label_margin"
                            android:layout_gravity="center_horizontal"
                            oak:font="@string/default_font_light"/>
                </LinearLayout>
            </LinearLayout>
            <oak.widget.TextViewWithFont
                    style="@style/DefaultTextView.VeryHuge"
                    android:id="@+id/go_stop"
                    android:layout_width="fill_parent"
                    android:background="@drawable/button_bg"
                    android:clickable="true"
                    android:textColor="@color/orange_text_color_selector"
                    android:text="@string/go_excl"
                    android:gravity="center_horizontal|center_vertical"
                    android:layout_marginLeft="@dimen/go_stop_margin"
                    android:layout_marginRight="@dimen/go_stop_margin"
                    android:layout_marginBottom="@dimen/default_padding"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    oak:font="@string/default_font_bold"/>
            <oak.widget.TextViewWithFont
                    style="@style/DefaultTextView.KindaLarge"
                    android:id="@+id/time_elapsed"
                    android:clickable="true"
                    android:textColor="@color/default_text_color_selector"
                    android:layout_above="@id/go_stop"
                    android:layout_marginBottom="-10dp"
                    android:layout_centerHorizontal="true"
                    oak:font="@string/default_font_mono_bold"/>
            <oak.widget.TextViewWithFont
                    style="@style/DefaultTextView.VeryHuge"
                    android:id="@+id/cost"
                    android:layout_width="fill_parent"
                    android:layout_below="@id/config"
                    android:layout_above="@id/time_elapsed"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/cost_text_size_ones"
                    android:gravity="center_horizontal|center_vertical"
                    oak:font="@string/default_font_mono"/>
            <ImageView
                    style="@style/Wrap"
                    android:id="@+id/reset"
                    android:visibility="gone"
                    android:layout_alignTop="@id/go_stop"
                    android:layout_alignBottom="@id/go_stop"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/default_padding"
                    android:src="@drawable/ic_reset"
                    android:contentDescription="@string/reset"/>
        </RelativeLayout>
    </ScrollView>
    <View
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="@color/orange"/>
</LinearLayout>